--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,6 @@
 <!doctype html>
-<html lang="en" class="dark">
+<html lang="es" dir="ltr" class="dark">
 	<head>
-		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
